@@ -1,7 +1,7 @@
-a222eac90eedbb803637bbdae1651108 *DESCRIPTION
+206a3df87e9327d40c2893b038bda49b *DESCRIPTION
 d75a56f9e156a34007c4492923b91b9b *NAMESPACE
-7ec707f457ae8fc02bb8fe5ae6b2c21b *NEWS
-f9ad6b456717a19fcd8ebaf34500737e *R/xgrove.R
+fea6170f9826381a4d3f075c724d8da4 *NEWS
+4c5408ac3a5b07f57ed5e74bce3628db *R/xgrove.R
 2f88d929f679dfc9a304fe7c79a11685 *README.md
 b39bc544cea2cf944e83a02bdae10ef0 *man/figures/logo.png
 88efd8a146c883362f87ce1160be8826 *man/plot.sgtree.Rd
